Prima parte dell'header

--- a/index.html
+++ b/index.html
@@ -1,12 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>html-struttura-discord</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
-    
+    <!-- contenitore header -->
+    <header class="menu-navigazione">
+        <!-- contenitore con all'iterno logo/menu/accedi -->
+        <div class="contenitore">
+
+            <div class="logo comune">
+                <img src="" alt="">
+                <span>discord</span>
+            </div>
+
+            <div class="menu comune">
+                <ul>
+                    <li>scarica</li>
+                    <li>parché discord</li>
+                    <li>nitro</li>
+                    <li>sicurezza</li>
+                    <li>assistenza</li>
+                </ul>
+            </div>
+
+            <div class="accedi comune">
+                <button>accedi</button>
+            </div>
+        </div>
+
+
+        <!-- contenitore  con testo e bottoni  -->
+        <div class="text">
+            <h1>titolo</h1>
+            <p>testo</p>
+            <div class="button">
+                <button id="tasto1">tasto</button>
+                <button id="tasto2">tasto</button>
+            </div>
+        </div>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
+
 </html>
