Termine del corpo main

--- a/index.html
+++ b/index.html
@@ -45,7 +45,101 @@
             </div>
         </div>
     </header>
-    <main></main>
+
+    <main>
+
+        <div class="sfondo">
+            <figure class="immagine">
+                <div class="testo-immagine">
+
+                </div>
+                <img src="" alt="">
+            </figure>
+
+            <section class="text2">
+                <h2></h2>
+                <p></p>
+            </section>
+        </div>
+
+        <div class="sfondo2">
+            <section class="text3">
+                 <div class="text3">
+                    <h2></h2>
+                    <p></p>
+                </div>
+            </section>
+
+            <section class="lista">
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </section>
+        </div>
+        <div class="sfondo">
+            <section class="lista">
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </section>
+
+            <div class="contenitore-sovrapposto">
+                <img id="immagine-sovrapposta" src="" alt="">
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                   
+                </ul>
+            </div>
+            <section class="text2">
+                <h2></h2>
+                <p></p>
+            </section>
+        </div>
+
+        <div class="ultimo-sfondo">
+            <h2></h2>
+            <p></p>
+
+            <div class=" ultimo sfondo contenitore-immagine2">
+
+            </div>
+
+             <div class="contenitore-immagini">
+                <div class="img1">
+                </div>
+
+                <div class="immagini-verticali">
+                    <div class="img2"></div>
+                    <div class="img3"></div>
+                    
+                </div>
+            </div> 
+            <div class="titolo-tasto">
+                <h2></h2>
+                <button></button>
+
+            </div>
+
+        </div>
+
+
+
+    </main>
     <footer></footer>
 </body>
 
