--- a/index.html
+++ b/index.html
@@ -140,7 +140,86 @@
 
 
     </main>
-    <footer></footer>
+    <footer>
+        <div class="contenitore-piedipagina">
+
+            <div class="lista-footer3">
+                <h2></h2>
+                <span></span>
+                <div class="button2">
+                    <button></button>
+                    <button></button>
+                    <button></button>
+                    <button></button>
+                </div>
+            </div>
+            <div class="lista-footer menu1">
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+            <div class="lista-footer menu1">
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+            <div class="lista-footer2 menu1">
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+            <div class="lista-footer menu1">
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+        </div>
+
+      <div class="hr">
+          <hr>
+
+      </div>
+
+            <div class="logo-tasto">
+                <div class="logo comune">
+                    <img src="" alt="">
+                    <span>discord</span>
+                </div>
+                <div class="accedi comune">
+                    <button>registrati</button>
+                </div>
+                
+
+            </div>
+        
+
+    </footer>
 </body>
 
 </html>
